# PYTHON_PROJECTS

./: bagels.py  birthday_paradox.py  pyproject.toml
